--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoApp"
         tools:targetApi="31">
+        <activity android:name=".presentation.CoinPriceInfoActivity"/>
         <activity
-            android:name=".CoinPriceInfoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CoinListInfoActivity"
+            android:name=".presentation.CoinListInfoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
