--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,9 @@ dependencies {
 
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
+    implementation "com.google.dagger:dagger:2.48"
+    kapt "com.google.dagger:dagger-compiler:2.48"
+
+
 
 }
